# py_disinfection

./: CONTRIBUTING.rst  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
py_disinfection/: .travis.yml  HISTORY.rst  Makefile
py_disinfection/src/py_disinfection/: cli.py  estimation.py  py_disinfection.py
py_disinfection/tests/: test_py_disinfection.py
src/py_disinfection/: cli.py  core.py  estimation.py  py_disinfection.py  tables.py
tests/: test_py_disinfection.py
