[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_disinfection"
version = "0.1.0"
description = "Library and command to calculate detention times, disinfectant residuals, and CT ratios for drinking water tanks"
readme = "README.rst"
authors = [
  {name = "Todd Bryan", email = "todd@cabin31.com"}
]
maintainers = [
  {name = "Todd Bryan", email = "todd@cabin31.com"}
]
classifiers = [

]
license = {text = "BSD license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/toddrbryan/py_disinfection/issues"
changelog = "https://github.com/toddrbryan/py_disinfection/blob/master/changelog.md"
homepage = "https://github.com/toddrbryan/py_disinfection"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

